# ImageToSplat

./: .gitignore  Build-Portable.ps1  NekoSplatForge.spec  README.md  index.html  package-lock.json  package.json  run_gradio.py  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
