[package]
name = "image-to-splat"
version = "26.6.19"
description = "Image to Gaussian splat generator"
authors = ["Neko Legends"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "image_to_splat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
